--- a/css/styles.css
+++ b/css/styles.css
@@ -1,117 +1,62 @@
-* {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    text-decoration: none;
-}
-
-nav {
-    height: 80px;
-}
-
-nav img {
-    width: 150px;
-    position: absolute;
-    top: 17px;
-    left: 12%;
-}
-
-nav ul {
-    float: right;
-    margin-right: 25px;
-}
-
-nav ul li {
-    display: inline-block;
-    line-height: 80px;
-    margin: 0 15px;
-}
-
-nav ul li a {
-    position: relative;
-    color: #0A3641;
-    font-size: 18px;
-    padding: 5px 0;
-    text-transform: uppercase;
-}
-
-nav ul li a:before {
-    position: absolute;
-    content: '';
-    left: 0;
-    bottom: 0;
-    height: 3px;
+html,
+body {
     width: 100%;
-    background: white;
-    transform: scaleX(0);
-    transform-origin: right;
+    height: 100%;
+    margin: 0;
 }
 
-nav ul li a:hover:before {
-    transform: scaleX(1);
-    transform-origin: left;
+html {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-label #btn,
-label #cancel {
-    font-size: 30px;
+.nav {
+    border-bottom: 1px solid #EAEAE8;
+    text-align: right;
+    height: 70px;
+    line-height: 70px;
+}
+
+.menu {
+    margin: 0 30px 0 0;
+}
+
+.menu a {
+    clear: right;
+    text-decoration: none;
+    color: gray;
+    margin: 0 10px;
+    line-height: 70px;
+}
+
+label {
+    margin: 0 40px 0 0;
+    font-size: 26px;
+    line-height: 70px;
+    display: none;
+    width: 26px;
     float: right;
-    line-height: 80px;
-    margin-right: 40px;
-    cursor: pointer;
+}
+
+#toggle {
     display: none;
 }
 
-#check {
-    display: none;
-}
-
-@media (max-width: 1118px) {
-    nav img {
-        left: 8%;
-    }
-}
-
-@media (max-width: 944px) {
-    nav img {
-        left: 6%;
-        top: 20px;
-        width: 130px;
-    }
-    nav ul li a {
-        font-size: 17px;
-    }
-}
-
-@media (max-width: 860px) {
-    label #btn {
+@media only screen and (max-width: 580px) {
+    label {
         display: block;
+        cursor: pointer;
     }
-    ul {
-        position: fixed;
-        width: 100%;
-        height: 100vh;
-        background: #0A3641;
-        top: 80px;
-        left: -100%;
+    .menu {
         text-align: center;
-        transition: all .5s;
-    }
-    nav ul li {
-        display: block;
-        margin-right: 50px 0;
-        line-height: 30px;
-    }
-    nav ul li a {
-        font-size: 20px;
-    }
-    #check:checked ~ ul {
-        left: 0;
-    }
-    #check:checked ~ label #btn {
+        width: 100%;
         display: none;
     }
-    #check:checked ~ label #cancel{
+    .menu a {
+        display: block;
+        border-bottom: 1px solid #EAEAE8;
+        margin: 0;
+    }
+    #toggle:checked + .menu {
         display: block;
     }
 }
