--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,31 @@
+@font-face {
+    font-family: "Source Sans Pro";
+    src: url("../fonts/Source_Sans_Pro/SourceSansPro-Black.ttf") format("truetype");
+    src: url("../fonts/Source_Sans_Pro/SourceSansPro-Light.ttf") format("truetype");
+    src: url("../fonts/Source_Sans_Pro/SourceSansPro-Regular.ttf") format("truetype");
+}
+
 html,
 body {
     width: 100%;
     height: 100%;
     margin: 0;
+    font-family: 'Source Sans Pro Regular, Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-html {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+.logo {
+    max-width: 200px;
+    padding: 20px;
+}
+
+.top-line {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
 .nav {
-    border-bottom: 1px solid #EAEAE8;
     text-align: right;
     height: 70px;
     line-height: 70px;
@@ -23,25 +38,64 @@ html {
 .menu a {
     clear: right;
     text-decoration: none;
-    color: gray;
-    margin: 0 10px;
+    color: #0A3641;
+    margin: 0 30px;
     line-height: 70px;
+    text-transform: uppercase;
+    font-family: 'Source Sans Pro Black';
+    font-size: 20px
 }
 
 label {
     margin: 0 40px 0 0;
-    font-size: 26px;
+    font-size: 40px;
     line-height: 70px;
     display: none;
     width: 26px;
     float: right;
+    color: #0A3641;
 }
 
 #toggle {
     display: none;
 }
 
-@media only screen and (max-width: 580px) {
+.header-photo {
+    width: 100%;
+    height: 100%;
+}
+
+h1 {
+    color: #0A3641; 
+    font-family: 'Source Sans Pro Black';
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 30px;
+}
+
+.shop-now .btn {
+    background-color: #8C3723;
+    color: #ffffff;
+    font-family: "Source Sans Pro Black";
+    text-transform: uppercase;
+    padding: 10px 60px;
+    border: none;
+    border-radius: 25px;
+    cursor: pointer;
+}
+
+.shop-now {
+    display: block;
+    text-align: center;
+}
+
+.module-two {
+    display: block;
+    text-align: center;
+    padding: 100px
+}
+
+@media only screen and (max-width: 965px) {
     label {
         display: block;
         cursor: pointer;
@@ -58,5 +112,15 @@ label {
     }
     #toggle:checked + .menu {
         display: block;
+    }
+}
+
+@media only screen and (max-width: 1225px) {
+    .menu a {
+        margin: 0 20px;
+        font-size: 15px;
+    }
+    #toggle {
+        display: none;
     }
 }
