--- a/css/styles.css
+++ b/css/styles.css
@@ -87,13 +87,65 @@ h1 {
 .shop-now {
     display: block;
     text-align: center;
+    margin-bottom: 50px;
 }
 
-.module-two {
+section.module-two {
+    display: flex;
+    justify-content: center;
+}
+
+section.module-two img {
+    margin: 20px 20px 0 20px;
+}
+
+section.module-two a {
     display: block;
     text-align: center;
-    padding: 100px
+    color: #0A3641; 
+    font-family: 'Source Sans Pro Black';
+    text-transform: uppercase;
+    text-decoration: none;
+    font-size: 20px;
 }
+
+button.btn-small {
+    display: block;
+    text-align: center;
+    background-color: #8C3723;
+    color: #ffffff;
+    font-family: "Source Sans Pro Black";
+    text-transform: uppercase;
+    padding: 5px 30px;
+    border: none;
+    border-radius: 25px;
+    cursor: pointer;
+    margin-left: 160px;
+    margin-top: 10px;
+}
+
+h2 {
+    color: #0A3641; 
+    font-family: 'Source Sans Pro Black';
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 20px;
+    margin: 50px 200px;
+}
+
+section.module-3 {
+    display: flex;
+    margin-top: 100px;
+}
+
+h3 {
+    color: #0A3641; 
+    font-family: 'Source Sans Pro Black';
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 30px; 
+}
+
 
 @media only screen and (max-width: 965px) {
     label {
