--- a/css/styles.css
+++ b/css/styles.css
@@ -7,9 +7,7 @@
 
 html,
 body {
-    width: 100%;
-    height: 100%;
-    margin: 0;
+    margin: 0px;
     font-family: 'Source Sans Pro Regular, Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
@@ -26,6 +24,7 @@ body {
 }
 
 .nav {
+    border-bottom: 1px solid #EAEAEB;
     text-align: right;
     height: 70px;
     line-height: 70px;
@@ -152,8 +151,6 @@ img.img-module3 {
 }
 
 .btn2 {
-    display: block;
-    text-align: center;
     background-color: #8C3723;
     color: #ffffff;
     font-family: "Source Sans Pro Black";
@@ -164,6 +161,20 @@ img.img-module3 {
     cursor: pointer;
 }
 
+.module-4 {
+    margin-top: 80px;
+    margin-left: 80px;
+}
+
+.img-3 {
+    position: absolute;
+    max-width: 100%;
+}
+
+section.module-4 img {
+    padding: 10px;
+    max-width: 100%;
+}
 
 
 @media only screen and (max-width: 965px) {
